force-app/main/default/objects/Opportunity/fields/Infosec_Review__c.field-meta.xml
<CustomField>
    <fullName>Infosec_Review__c</fullName>
    <description>What is the status of Infosec review for this opportunity</description>
    <label>Infosec Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Complete</fullName>
                <default>true</default>
                <label>Not Complete</label>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>