force-app/main/default/objects/Opportunity/fields/Install_Status__c.field-meta.xml
<CustomField>
    <fullName>Install_Status__c</fullName>
    <label>Install Status</label>
    <type>TextArea</type>
</CustomField>