force-app/main/default/objects/Opportunity/fields/Integration_Requests__c.field-meta.xml
<CustomField>
    <fullName>Integration_Requests__c</fullName>
    <label>Integration Requests</label>
    <type>TextArea</type>
</CustomField>