force-app/main/default/objects/Opportunity/fields/Landing_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Landing_Use_Case__c</fullName>
    <formula>Case( text(Primary_Product__c),
&quot;Copilot&quot;,&quot;Unified Insights + Copilot&quot;,
&quot;Unified Insights&quot;,&quot;Unified Insights + Copilot&quot;,
&quot;Pipelines&quot;,&quot;SDLC &amp; Migration&quot;,
&quot;Salesforce&quot;,&quot;Salesforce &amp; SaaS DevOps&quot;,
&quot;Salesforce &amp; SaaS DevOps&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landing Use Case</label>
    <type>Text</type>
</CustomField>