force-app/main/default/objects/Opportunity/fields/Latest_Open_Stage__c.field-meta.xml
<CustomField>
    <fullName>Latest_Open_Stage__c</fullName>
    <label>Latest Open Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>