force-app/main/default/objects/Opportunity/fields/Link_to_external_notes__c.field-meta.xml
<CustomField>
    <fullName>Link_to_external_notes__c</fullName>
    <label>Link to external notes</label>
    <type>Url</type>
</CustomField>