force-app/main/default/objects/Opportunity/fields/Link_to_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Proposal__c</fullName>
    <label>Link to Proposal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>