force-app/main/default/objects/Opportunity/fields/Linkage__c.field-meta.xml
<CustomField>
    <fullName>Linkage__c</fullName>
    <description>finding ways to link this opportunity to a greater organizational initiative</description>
    <inlineHelpText>finding ways to link this opportunity to a greater organizational initiative</inlineHelpText>
    <label>Linkage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>