force-app/main/default/objects/Opportunity/fields/Loss_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loss_Notes__c</fullName>
    <label>Closed Lost Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>