force-app/main/default/objects/Opportunity/fields/Macro_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Macro_Use_Case__c</fullName>
    <label>Macro Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SDLC</fullName>
            </value>
            <value>
                <fullName>IaC</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>