force-app/main/default/objects/Opportunity/fields/Max_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Max_Opportunity_Stage__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Date_Stage_05__c)), &quot;5 Procurement&quot;,
IF(
  NOT(ISBLANK(Date_Stage_04__c)), &quot;4 Business Case&quot;,
IF(
  NOT(ISBLANK(Date_Stage_03__c)), &quot;3 POC&quot;,
IF(
  NOT(ISBLANK(Date_Stage_02__c)), &quot;2 Demo&quot;,
IF(
  NOT(ISBLANK(Date_Stage_01__c)), &quot;1 Meeting&quot;,
  &quot;&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Opportunity Stage</label>
    <type>Text</type>
</CustomField>