force-app/main/default/objects/Opportunity/fields/MEDDPICC_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Score__c</fullName>
    <formula>VALUE(TEXT(Champion_Score__c )) +  VALUE(TEXT(Competitior_Score__c)) + VALUE(TEXT(Decision_Process_Score__c ))+ VALUE(TEXT(Decision_Criteria_Score__c)) + VALUE(TEXT(Metric_Score__c)) + VALUE(TEXT(Economic_Buyer_Score__c ))+ VALUE(TEXT(Paper_Process_Score__c)) + VALUE(TEXT(Identify_Pain_Score__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MEDDPICC Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>