force-app/main/default/objects/Opportunity/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <inlineHelpText>The economic benefits of your solution. What is the quantifiable economic gain and benefit of your solution?</inlineHelpText>
    <label>Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>