force-app/main/default/objects/Opportunity/fields/Microsoft_AE_Email__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_AE_Email__c</fullName>
    <label>Microsoft AE Email</label>
    <type>Email</type>
</CustomField>