force-app/main/default/objects/Opportunity/fields/Microsoft_Azure_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Azure_Marketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Microsoft Azure Marketplace</label>
    <type>Checkbox</type>
</CustomField>