force-app/main/default/objects/Opportunity/fields/Microsoft_CRM_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_CRM_Identifier__c</fullName>
    <description>Identifier for Microsoft&apos;s CRM opportunity in co-sell deal</description>
    <inlineHelpText>Microsoft&apos;s CRM Identifier for this co-sell deal</inlineHelpText>
    <label>Microsoft CRM Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>