force-app/main/default/objects/Opportunity/fields/MNDA_Signed__c.field-meta.xml
<CustomField>
    <fullName>MNDA_Signed__c</fullName>
    <formula>Account.MNDA_Signed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MNDA Signed</label>
    <type>Checkbox</type>
</CustomField>