force-app/main/default/objects/Opportunity/fields/MNDA_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>MNDA_Signed_Date__c</fullName>
    <formula>Account.MNDA_Fully_Executed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MNDA Signed Date</label>
    <type>Date</type>
</CustomField>