force-app/main/default/objects/Opportunity/fields/MRC_s_Minimum_Required_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>MRC_s_Minimum_Required_Capabilities__c</fullName>
    <label>MRC&apos;s: Minimum Required Capabilities</label>
    <type>TextArea</type>
</CustomField>