force-app/main/default/objects/Opportunity/fields/MSA_Signed__c.field-meta.xml
<CustomField>
    <fullName>MSA_Signed__c</fullName>
    <formula>Account.MSA_Signed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSA Signed</label>
    <type>Checkbox</type>
</CustomField>