force-app/main/default/objects/Opportunity/fields/Next_Step_Notes__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Notes__c</fullName>
    <label>Next Step Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>