force-app/main/default/objects/Opportunity/fields/NumberContacts__c.field-meta.xml
<CustomField>
    <fullName>NumberContacts__c</fullName>
    <label># Contacts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>