force-app/main/default/objects/Opportunity/fields/Omit_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Omit_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Omit from Outside Forecasts</description>
    <label>Omit Reporting</label>
    <type>Checkbox</type>
</CustomField>