force-app/main/default/objects/Opportunity/fields/Opp_Age__c.field-meta.xml
<CustomField>
    <fullName>Opp_Age__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>