force-app/main/default/objects/Opportunity/fields/Opp_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Opp_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp ID 18</label>
    <type>Text</type>
</CustomField>