force-app/main/default/objects/Opportunity/fields/Outreach_Last_Touch_Contact__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Last_Touch_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary contact when this opportunity was first created</description>
    <inlineHelpText>The primary contact when this opportunity was first created</inlineHelpText>
    <label>Last Touch Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Last Touch Contact)</relationshipLabel>
    <relationshipName>Last_Touch_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>