force-app/main/default/objects/Opportunity/fields/Paper_Process__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process__c</fullName>
    <inlineHelpText>The paper process the company uses to process and sign the order.</inlineHelpText>
    <label>Paper Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>