force-app/main/default/objects/Opportunity/fields/Partner_Assist_1_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Assist_1_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Assist 1 Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Partner Assist 1 Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>