force-app/main/default/objects/Opportunity/fields/Partner_Assist_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Assist_1_Date__c</fullName>
    <label>Partner Assist 1 Date</label>
    <type>Date</type>
</CustomField>