force-app/main/default/objects/Opportunity/fields/Partner_Assist_2__c.field-meta.xml
<CustomField>
    <fullName>Partner_Assist_2__c</fullName>
    <label>Partner Assist 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partners</valueSetName>
    </valueSet>
</CustomField>