force-app/main/default/objects/Opportunity/fields/Partner_Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Business_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Business Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Partner Business Contact)</relationshipLabel>
    <relationshipName>Partner_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>