force-app/main/default/objects/Opportunity/fields/Partner_Direction__c.field-meta.xml
<CustomField>
    <fullName>Partner_Direction__c</fullName>
    <description>A referral Opportunity inbound is &quot;From Partner&quot;
An Opportunity transferred to a Partner for closing/selling is &quot;To Partner&quot;</description>
    <inlineHelpText>A referral Opportunity inbound is &quot;From Partner&quot;
An Opportunity transferred to a Partner for closing/selling is &quot;To Partner&quot;</inlineHelpText>
    <label>Partner Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Partner</fullName>
            </value>
            <value>
                <fullName>To Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>