force-app/main/default/objects/Opportunity/fields/Partner_Notes__c.field-meta.xml
<CustomField>
    <fullName>Partner_Notes__c</fullName>
    <label>Partner Notes</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>