force-app/main/default/objects/Opportunity/fields/Partner_Primary__c.field-meta.xml
<CustomField>
    <fullName>Partner_Primary__c</fullName>
    <label>Partner Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partners</valueSetName>
    </valueSet>
</CustomField>