force-app/main/default/objects/Opportunity/fields/Partner_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Partner Primary Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>