force-app/main/default/objects/Opportunity/fields/Partner_Primary_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Primary_Date__c</fullName>
    <label>Partner Primary Date</label>
    <type>Date</type>
</CustomField>