force-app/main/default/objects/Opportunity/fields/Partner_Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Technical_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Technical Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Partner Technical Contact)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>