force-app/main/default/objects/Opportunity/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <inlineHelpText>A referral Opportunity inbound is &quot;From Partner&quot;
An Opportunity transferred to a Partner for closing/selling is &quot;To Partner&quot;</inlineHelpText>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Types</valueSetName>
    </valueSet>
</CustomField>