force-app/main/default/objects/Opportunity/fields/PBO_s_Positive_Business_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>PBO_s_Positive_Business_Outcomes__c</fullName>
    <label>PBO&apos;s Positive Business Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>