force-app/main/default/objects/Opportunity/fields/Pipeline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Amount__c</fullName>
    <formula>if(  IsClosed ,0, Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Pipeline Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>