force-app/main/default/objects/Opportunity/fields/PO_Needed__c.field-meta.xml
<CustomField>
    <fullName>PO_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Needed</label>
    <type>Checkbox</type>
</CustomField>