force-app/main/default/objects/Opportunity/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>text box to enter the actual PO number, If someone in Accounts Receivable needs to track down a late payment, they can track this PO number on an opportunity</description>
    <label>PO Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>