force-app/main/default/objects/Opportunity/fields/POC_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>POC_Next_Step__c</fullName>
    <label>POV Next Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>