force-app/main/default/objects/Opportunity/fields/POC_Required__c.field-meta.xml
<CustomField>
    <fullName>POC_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POV Required</label>
    <type>Checkbox</type>
</CustomField>