force-app/main/default/objects/Opportunity/fields/POC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>POC_Start_Date__c</fullName>
    <label>POV Start Date</label>
    <type>Date</type>
</CustomField>