force-app/main/default/objects/Opportunity/fields/Primary_Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partnership_Type__c</fullName>
    <label>Primary Partnership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>System Integrator (SI)</fullName>
            </value>
            <value>
                <fullName>Managed Service Provider (MSP)</fullName>
            </value>
            <value>
                <fullName>Independent Software Vendor (ISV)</fullName>
            </value>
            <value>
                <fullName>Original Equipment Manufacturer (OEM)</fullName>
            </value>
            <value>
                <fullName>Value-Added Reseller (VAR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>