force-app/main/default/objects/Opportunity/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <label>Primary Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forge</fullName>
            </value>
            <value>
                <fullName>Pipelines</fullName>
            </value>
            <value>
                <fullName>Unified Insights</fullName>
            </value>
            <value>
                <fullName>Copilot</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Agents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>