force-app/main/default/objects/Opportunity/fields/Primary_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Primary_Use_Case__c</fullName>
    <label>Primary Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Use_Case</valueSetName>
    </valueSet>
</CustomField>