force-app/main/default/objects/Opportunity/fields/Prior_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prior_Stage__c</fullName>
    <label>Prior Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>