force-app/main/default/objects/Opportunity/fields/Reached_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Reached_Discovery__c</fullName>
    <formula>IF(ISBLANK(Date_at_Discovery__c),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached Discovery</label>
    <type>Checkbox</type>
</CustomField>