force-app/main/default/objects/Opportunity/fields/Reached_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Reached_Negotiation__c</fullName>
    <formula>IF(ISBLANK(Date_at_Negotiation__c),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached Negotiation</label>
    <type>Checkbox</type>
</CustomField>