force-app/main/default/objects/Opportunity/fields/Reached_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Reached_Proposal__c</fullName>
    <formula>IF( ISBLANK(Date_at_Proposal__c),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached Proposal</label>
    <type>Checkbox</type>
</CustomField>