force-app/main/default/objects/Opportunity/fields/Reached_Signed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Reached_Signed_Contract__c</fullName>
    <formula>IF(ISBLANK(Date_at_Signed_Contract_Received__c),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached Signed Contract</label>
    <type>Checkbox</type>
</CustomField>