force-app/main/default/objects/Opportunity/fields/Reached_Solution_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Reached_Solution_Alignment__c</fullName>
    <formula>IF( ISBLANK(Date_at_Solution_Alignment__c),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached Solution Alignment</label>
    <type>Checkbox</type>
</CustomField>