force-app/main/default/objects/Opportunity/fields/Reason_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Reason_Rejected__c</fullName>
    <description>What reason did this not become a sales accepted opportunity</description>
    <label>Reason Rejected</label>
    <type>TextArea</type>
</CustomField>